# vulkan-dev

./: .gitignore  CMakeLists.txt
build-test/: CMakeLists.txt
cmake/: common-dependencies.cmake  common-macros.cmake  compiler-settings.cmake  platform.cmake
ip-core/: CMakeLists.txt
ip-core/include/ip/core/: UnreferencedParam.h
ip-core/include/ip/core/debug/: IPException.h
ip-core/include/ip/core/logging/: BackgroundLogger.h  CompositeLogger.h  ConsoleLogger.h  ILogLineFormatter.h  ILogger.h  LogEntry.h  LogLevel.h  LogScope.h  LogSystem.h  LoggingMacros.h  RollingFileLogger.h  SerializedLogger.h  StandardLogLineFormatter.h
ip-core/include/ip/core/memory/: GlobalAllocation.h  Memory.h  MemoryTracking.h
ip-core/include/ip/core/memory/stl/: Deque.h  List.h  Map.h  Set.h  Stack.h  Stream.h  String.h  StringStream.h  UnorderedMap.h  Vector.h
ip-core/include/ip/core/utils/: EnumUtils.h  FileUtils.h  StringUtils.h  SystemUtils.h  TimeUtils.h
ip-core/source/logging/: BackgroundLogger.cpp  CompositeLogger.cpp  ConsoleLogger.cpp  LogEntry.cpp  LogLevel.cpp  LogScope.cpp  LogSystem.cpp  RollingFileLogger.cpp  SerializedLogger.cpp  StandardLogLineFormatter.cpp
ip-core/source/memory/: GlobalAllocation.cpp  Memory.cpp
ip-core/source/posix/: SystemUtils.cpp
ip-core/source/utils/: FileUtils.cpp  StringUtils.cpp  SystemUtils.cpp  SystemUtilsShared.cpp  TimeUtils.cpp
ip-core/source/windows/: SystemUtils.cpp
ip-render/: CMakeLists.txt
ip-render/include/ip/render/: DisplayMode.h  GlfwError.h  IPRender.h  IRenderVisitable.h  IRenderVisitor.h  IRenderer.h  RenderDebugLevel.h  RendererApiType.h  RendererConfig.h
ip-render/include/ip/render/model/: Model.h  ModelInstance.h  ModelLibrary.h
ip-render/include/ip/render/scene/: Scene.h
ip-render/include/ip/render/utilities/: BackgroundRenderingThread.h  FrameRateLimiter.h
ip-render/include/ip/render/vulkan/: ScopedVulkanShader.h  VulkanDeviceProperties.h  VulkanRenderer.h
ip-render/include/ip/render/vulkan/visitors/: BuildModelCommandListVisitor.h
ip-render/source/: GlfwError.cpp  IPRender.cpp
ip-render/source/model/: Model.cpp  ModelInstance.cpp  ModelLibrary.cpp
ip-render/source/scene/: Scene.cpp
ip-render/source/utilities/: BackgroundRenderingThread.cpp  FrameRateLimiter.cpp
ip-render/source/vulkan/: ScopedVulkanShader.cpp  VulkanRenderer.cpp
ip-render/source/vulkan/visitors/: BuildModelCommandListVisitor.cpp
scripts/: build_shaders.py
tutorial/: CMakeLists.txt
tutorial/include/vulkan-dev/tutorial/: TutorialApplication.h
tutorial/source/: TutorialApplication.cpp  main.cpp
